--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.10.4
+beautifulsoup4==4.3.2
 itsdangerous==0.24
+pytz==2015.2
 requests==2.6.2
+wikipedia==1.4.0
